Verified that .then call in promise is async. Ng-cloaking to avoid flickering of angular tags.

--- a/FotM.Apollo/Content/Site.css
+++ b/FotM.Apollo/Content/Site.css
@@ -103,3 +103,7 @@ li.fb_button {
 
 li.donate_button {
 }
+
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
